--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,30 @@
+certifi==2023.7.22
+charset-normalizer==3.3.2
 contourpy==1.2.0
 cycler==0.12.1
+filelock==3.13.1
 fonttools==4.44.0
+fsspec==2023.10.0
 joblib==1.3.2
 kiwisolver==1.4.5
 matplotlib==3.8.1
+mpmath==1.3.0
+networkx==3.2.1
 numpy==1.26.2
 pandas==2.1.3
 Pillow==10.1.0
 pyparsing==3.1.1
 pytz==2023.3.post1
 pywin32==305.1
+requests==2.31.0
 scikit-learn==1.3.2
 scipy==1.11.3
+sympy==1.12
 threadpoolctl==3.2.0
+torch==2.1.0
+torchvision==0.16.0
+tqdm==4.66.1
 tzdata==2023.3
+urllib3==2.1.0
 webencodings==0.5.1
 
