--- a/requirements.txt
+++ b/requirements.txt
@@ -78,10 +78,10 @@ sympy==1.12
 threadpoolctl==3.2.0
 tifffile==2023.12.9
 timm==0.9.12
-torch==2.1.1+cu121
-torchaudio==2.1.1
+#torch==2.1.1+cu121
+#torchaudio==2.1.1
 torchsummary==1.5.1
-torchvision==0.16.1
+#torchvision==0.16.1
 tornado==6.4
 tqdm==4.66.1
 traitlets==5.14.0
