--- a/requirements.txt
+++ b/requirements.txt
@@ -1,93 +1,57 @@
-alembic==1.13.1
-asttokens==2.4.1
 beautifulsoup4==4.12.3
-certifi==2023.11.17
+certifi==2024.2.2
 charset-normalizer==3.3.2
-CoCa-pytorch==0.1.0
-colorama==0.4.6
-colorlog==6.8.2
-comm==0.2.0
 contourpy==1.2.0
-cuda-python==12.3.0
 cycler==0.12.1
-debugpy==1.8.0
-decorator==5.1.1
-einops==0.7.0
-executing==2.0.1
 filelock==3.13.1
-fonttools==4.45.1
-fsspec==2023.10.0
-ftfy==6.1.3
+fonttools==4.50.0
+fsspec==2024.3.0
 gdown==5.1.0
-greenlet==3.0.3
-huggingface-hub==0.20.1
+huggingface-hub==0.21.4
 idna==3.6
-imageio==2.33.1
-ipykernel==6.27.1
-ipython==8.18.1
-jedi==0.19.1
-Jinja2==3.1.2
+Jinja2==3.1.3
 joblib==1.3.2
-jupyter_client==8.6.0
-jupyter_core==5.5.0
 kiwisolver==1.4.5
-lazy_loader==0.3
-llvmlite==0.41.1
-Mako==1.3.2
-MarkupSafe==2.1.3
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
+MarkupSafe==2.1.5
+matplotlib==3.8.3
 mpmath==1.3.0
-nest-asyncio==1.5.8
 networkx==3.2.1
-numba==0.58.1
-numpy==1.26.2
-open-clip-torch==2.23.0
-opencv-python==4.8.1.78
-optuna==3.5.0
-packaging==23.2
-pandas==2.1.3
-parso==0.8.3
-Pillow==10.1.0
-platformdirs==4.0.0
-prompt-toolkit==3.0.41
-protobuf==4.25.1
-psutil==5.9.6
-pure-eval==0.2.2
-Pygments==2.17.2
-pyparsing==3.1.1
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.4.99
+nvidia-nvtx-cu12==12.1.105
+packaging==24.0
+pandas==2.2.1
+pillow==10.2.0
+pyparsing==3.1.2
 PySocks==1.7.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-pywin32==306
+python-dateutil==2.9.0.post0
+pytz==2024.1
 PyYAML==6.0.1
-pyzmq==25.1.1
-regex==2023.12.25
 requests==2.31.0
-safetensors==0.4.1
-scikit-image==0.22.0
-scikit-learn==1.3.2
-scipy==1.11.4
-sentencepiece==0.1.99
+safetensors==0.4.2
+scikit-learn==1.4.1.post1
+scipy==1.12.0
 six==1.16.0
-sklearn==0.0.post11
 soupsieve==2.5
-SQLAlchemy==2.0.27
-stack-data==0.6.3
 sympy==1.12
-threadpoolctl==3.2.0
-tifffile==2023.12.9
-timm==0.9.12
-#torch==2.1.1+cu121
-#torchaudio==2.1.1
-torchsummary==1.5.1
-#torchvision==0.16.1
-tornado==6.4
-tqdm==4.66.1
-traitlets==5.14.0
-typing_extensions==4.8.0
-tzdata==2023.3
-urllib3==2.1.0
-vit-pytorch==1.6.5
-wcwidth==0.2.12
+threadpoolctl==3.3.0
+timm==0.9.16
+torch==2.2.1
+torchaudio==2.2.1
+torchvision==0.17.1
+tqdm==4.66.2
+triton==2.2.0
+typing_extensions==4.10.0
+tzdata==2024.1
+urllib3==2.2.1
 xgboost==2.0.3
