--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,59 @@
+aiofiles==23.2.1
+aiohttp==3.9.3
+aioredis==1.3.1
+aiosignal==1.3.1
+alembic==1.13.1
+amqp==5.2.0
+annotated-types==0.6.0
+anyio==4.3.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+async-timeout==4.0.3
+asyncpg==0.29.0
+attrs==23.2.0
+bcrypt==4.1.2
 beautifulsoup4==4.12.3
+billiard==4.2.0
+celery==5.3.6
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 contourpy==1.2.0
+cryptography==42.0.5
 cycler==0.12.1
+dnspython==2.6.1
+email_validator==2.1.1
+fastapi==0.110.0
+fastapi-cache==0.1.0
+fastapi-cache2==0.2.1
+fastapi-users==13.0.0
+fastapi-users-db-sqlalchemy==6.0.1
 filelock==3.13.1
+flower==2.0.1
 fonttools==4.50.0
+frozenlist==1.4.1
 fsspec==2024.3.0
 gdown==5.1.0
+greenlet==3.0.3
+h11==0.14.0
+hiredis==2.3.2
 huggingface-hub==0.21.4
+humanize==4.9.0
 idna==3.6
 Jinja2==3.1.3
 joblib==1.3.2
 kiwisolver==1.4.5
+kombu==5.3.5
+makefun==1.15.2
+Mako==1.3.2
 MarkupSafe==2.1.5
 matplotlib==3.8.3
 mpmath==1.3.0
+multidict==6.0.5
 networkx==3.2.1
 numpy==1.26.4
 nvidia-cublas-cu12==12.1.3.1
@@ -31,27 +70,47 @@ nvidia-nvjitlink-cu12==12.4.99
 nvidia-nvtx-cu12==12.1.105
 packaging==24.0
 pandas==2.2.1
+pendulum==3.0.0
 pillow==10.2.0
+prometheus_client==0.20.0
+prompt-toolkit==3.0.43
+pwdlib==0.2.0
+pycparser==2.21
+pydantic==2.6.4
+pydantic_core==2.16.3
+PyJWT==2.8.0
 pyparsing==3.1.2
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.9
 pytz==2024.1
 PyYAML==6.0.1
+redis==4.6.0
 requests==2.31.0
 safetensors==0.4.2
 scikit-learn==1.4.1.post1
 scipy==1.12.0
 six==1.16.0
+sniffio==1.3.1
 soupsieve==2.5
+SQLAlchemy==2.0.28
+starlette==0.36.3
 sympy==1.12
 threadpoolctl==3.3.0
+time-machine==2.14.0
 timm==0.9.16
 torch==2.2.1
 torchaudio==2.2.1
 torchvision==0.17.1
+tornado==6.4
 tqdm==4.66.2
 triton==2.2.0
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
+uvicorn==0.28.0
+vine==5.1.0
+wcwidth==0.2.13
 xgboost==2.0.3
+yarl==1.9.4
