--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ bcrypt==4.1.2
 beautifulsoup4==4.12.3
 billiard==4.2.0
 celery==5.3.6
+celery-aio-pool==0.1.0rc6
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -39,6 +40,7 @@ frozenlist==1.4.1
 fsspec==2024.3.0
 gdown==5.1.0
 greenlet==3.0.3
+gunicorn==21.2.0
 h11==0.14.0
 hiredis==2.3.2
 huggingface-hub==0.21.4
