--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+# PROJECT
+
 aiofiles==23.2.1
 aiohttp==3.9.3
 aioredis==1.3.1
@@ -29,8 +31,7 @@ cycler==0.12.1
 dnspython==2.6.1
 email_validator==2.1.1
 fastapi==0.110.0
-fastapi-cache==0.1.0
-fastapi-cache2==0.2.1
+fastapi-cache2==0.2.0
 fastapi-users==13.0.0
 fastapi-users-db-sqlalchemy==6.0.1
 filelock==3.13.1
@@ -89,6 +90,7 @@ python-multipart==0.0.9
 pytz==2024.1
 PyYAML==6.0.1
 redis==4.6.0
+#redis==4.4.2
 requests==2.31.0
 safetensors==0.4.2
 scikit-learn==1.4.1.post1
@@ -116,3 +118,5 @@ vine==5.1.0
 wcwidth==0.2.13
 xgboost==2.0.3
 yarl==1.9.4
+
+psycopg2
