--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # PROJECT
 
+aiogram==3.4.1
 aiofiles==23.2.1
 aiohttp==3.9.3
 aioredis==1.3.1
@@ -81,6 +82,7 @@ pwdlib==0.2.0
 pycparser==2.21
 pydantic==2.6.4
 pydantic_core==2.16.3
+pydantic_settings==2.2.1
 PyJWT==2.8.0
 pyparsing==3.1.2
 PySocks==1.7.1
